--- a/public/watch.html
+++ b/public/watch.html
@@ -3,6 +3,7 @@
 <head>
   <script>
     (function () {
+      // allow your domains
       var ok = ['kixonair.com', 'www.kixonair.com', 'fotbal.site', 'www.fotbal.site', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
@@ -11,167 +12,169 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0b0f14" />
   <title>Kixonair — Match Center</title>
   <link rel="stylesheet" href="/styles.css?v=34" />
-  <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    :root{
-      --pad: clamp(12px, 3vw, 22px);
-      --primary-bg: #0f172a;
-      --secondary-bg: #1e293b;
-      --border-col: #334155;
-      --accent: #6366f1;
-      --accent-hover: #7c3aed;
-      --text-col: #f1f5f9;
-      --muted-col: #94a3b8;
+    body{
+      margin:0;
+      background:#0f172a;
+      color:#fff;
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
     }
-    html, body{
-      margin:0; padding:0;
-      background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
-      color: var(--text-col);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      line-height: 1.5;
-    }
-    a{ color: inherit; }
-    .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
-    .badge{ display:inline-block; border:1px solid var(--border-col); border-radius:999px; padding:4px 12px; background:rgba(15,23,42,0.4); }
-    .teams{ display:grid; grid-template-columns:1fr auto 1fr; gap:18px; align-items:center; justify-items:center; background:rgba(15,23,42,0.4); border:1px solid rgba(148,163,184,0.15); border-radius:16px; padding:16px; margin:20px 0 8px; }
-    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
-    .side img{ width:74px; height:74px; object-fit:contain; }
-    .teamName{ font-size:20px; font-weight:600; }
-    .h1{ font-size:32px; font-weight:800; color:var(--accent); }
-    .meta{ display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:12px; margin:16px 0; background:rgba(15,23,42,0.35); border:1px solid rgba(148,163,184,0.12); border-radius:16px; padding:14px; }
-    .meta .muted{ font-size:11px; text-transform:uppercase; }
-    .serverbar{ display:flex; gap:14px; flex-wrap:wrap; background:rgba(15,23,42,0.35); border:1px solid rgba(148,163,184,0.12); border-radius:16px; padding:14px; justify-content:center; }
-    .serverbar .sbtn{ background:linear-gradient(135deg,#6366f1,#7c3aed); border:none; border-radius:999px; padding:10px 18px; color:#fff; cursor:pointer; text-decoration:none; }
-    #loadingOverlay{ position:fixed; inset:0; background:rgba(0,0,0,.75); display:flex; flex-direction:column; gap:6px; align-items:center; justify-content:center; z-index:50; }
-    #loadingOverlay.hidden{ display:none; }
+    .wrap{max-width:980px;margin:0 auto;padding:18px;}
+    .badge{display:inline-block;background:rgba(15,23,42,.4);border:1px solid rgba(148,163,184,.25);padding:6px 12px;border-radius:999px;color:#fff;text-decoration:none}
+    .teams{margin-top:18px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;padding:16px;}
+    .side{display:flex;flex-direction:column;align-items:center;gap:8px}
+    .side img{width:70px;height:70px;object-fit:contain}
+    .teamName{font-size:20px;font-weight:600}
+    .h1{font-size:32px;font-weight:800;color:#6366f1}
+    .meta{margin-top:12px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;padding:12px;display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+    .meta .label{font-size:11px;text-transform:uppercase;color:rgba(241,245,249,.5)}
+    .serverbar{margin-top:14px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;padding:12px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
+    .serverbar a{background:linear-gradient(135deg,#6366f1,#7c3aed);padding:10px 18px;border-radius:999px;color:#fff;text-decoration:none;font-weight:500}
+    #loadingOverlay{position:fixed;inset:0;background:rgba(0,0,0,.7);display:flex;flex-direction:column;align-items:center;justify-content:center;gap:6px;z-index:50}
+    #loadingOverlay.hidden{display:none}
+    .spinner{width:42px;height:42px;border:4px solid rgba(255,255,255,.1);border-top-color:#fff;border-radius:50%;animation:spin 1s linear infinite}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    @media(max-width:650px){.teams{grid-template-columns:1fr;}.meta{grid-template-columns:1fr;}}
   </style>
 </head>
 <body>
-<header class="wrap">
-  <a class="badge" href="/">← Back</a>
-</header>
-
-<main class="wrap">
   <div id="loadingOverlay">
-    <div style="width:46px;height:46px;border:4px solid rgba(255,255,255,.1);border-top-color:white;border-radius:50%;animation:spin 1s linear infinite"></div>
-    <div class="muted">Loading match…</div>
+    <div class="spinner"></div>
+    <div>Loading match...</div>
   </div>
-  <div class="teams">
-    <div class="side">
-      <img id="homeLogo" src="/logo.svg" alt="">
-      <div id="homeName" class="teamName">Home</div>
+  <main class="wrap">
+    <a href="/" class="badge">← Back</a>
+
+    <div class="teams">
+      <div class="side">
+        <img id="homeLogo" src="/logo.svg" alt="">
+        <div id="homeName" class="teamName">Home</div>
+      </div>
+      <div class="h1">VS</div>
+      <div class="side">
+        <img id="awayLogo" src="/logo.svg" alt="">
+        <div id="awayName" class="teamName">Away</div>
+      </div>
     </div>
-    <div class="h1">VS</div>
-    <div class="side">
-      <img id="awayLogo" src="/logo.svg" alt="">
-      <div id="awayName" class="teamName">Away</div>
+
+    <p id="statusLine" style="text-align:center;margin-top:8px;color:#94a3b8;">Loading...</p>
+
+    <div class="meta">
+      <div>
+        <div class="label">Kickoff</div>
+        <div id="kickoff">-</div>
+      </div>
+      <div>
+        <div class="label">Competition</div>
+        <div id="league">-</div>
+      </div>
+      <div>
+        <div class="label">Status</div>
+        <div id="state">-</div>
+      </div>
     </div>
-  </div>
-  <p id="statusLine" class="muted" style="text-align:center;">Loading…</p>
-  <div class="meta">
-    <div><div class="muted">Kickoff</div><div id="kickoff">-</div></div>
-    <div><div class="muted">Competition</div><div id="league">-</div></div>
-    <div><div class="muted">Status</div><div id="state">-</div></div>
-  </div>
-  <div id="serverBar" class="serverbar"></div>
-</main>
+
+    <div id="serverBar" class="serverbar"></div>
+  </main>
 
 <script>
   const $ = id => document.getElementById(id);
-  function hideLoading(){ $('#loadingOverlay').classList.add('hidden'); }
-  function qs(n){ return new URLSearchParams(location.search).get(n) || ''; }
-  function getMatchId(){ return qs('id') || qs('m') || ''; }
-  function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w=>w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function toISOfromYYYYMMDD(s){ return s.slice(0,4)+'-'+s.slice(4,6)+'-'+s.slice(6,8); }
-  function addDaysISO(iso, n){ const d=new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
-  function isoToYYYYMMDD(iso){ return iso.replace(/-/g,''); }
-  function formatStatus(st){ const r=String(st||'').toUpperCase(); if(r.includes('STATUS_IN_PROGRESS')||r.includes('LIVE')) return 'Live'; if(r.includes('FINAL')) return 'Finished'; if(r.includes('SCHEDULED')||r.includes('STATUS_SCHEDULED')) return 'Scheduled'; return st||''; }
 
-  function renderServerButtons(slugStr){
-    const bar = $('#serverBar');
-    const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
-    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
-    bar.innerHTML = labels.map(l=>`<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
+  function hideLoading(){ $("#loadingOverlay").classList.add("hidden"); }
+  function qs(name){ return new URLSearchParams(location.search).get(name) || ""; }
+  function getMatchId(){ return qs("id") || qs("m") || ""; }
+  function slug(s){ return String(s||"").toLowerCase().replace(/[^a-z0-9]+/g,"-").replace(/(^-|-$)/g,""); }
+  function capWords(s){ return String(s||"").split(/[-\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):"").join(" "); }
+  function isoToYyyymmdd(iso){ return iso.replace(/-/g,""); }
+  function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
+  function formatStatus(st){
+    const r = String(st||"").toUpperCase();
+    if (r.includes("IN_PROGRESS") || r.includes("LIVE")) return "Live";
+    if (r.includes("FINAL")) return "Finished";
+    if (r.includes("SCHEDULED")) return "Scheduled";
+    return st || "";
+  }
+  function renderServers(){
+    const bar = $("#serverBar");
+    const url = "https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45";
+    const labels = ["Server 1","Server 2","Server 3","Server 4","Server 5"];
+    bar.innerHTML = labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join("");
   }
 
-  // prefill from URL
-  (function(){
+  // prefill names from URL so it's never empty
+  (function prime(){
     const id = getMatchId();
     if (!id) return;
-    const bare = id.includes('@') ? id.split('@')[0] : id;
-    const parts = bare.split('-vs-');
-    if (parts.length===2){
-      $('#homeName').textContent = capWords(parts[0]);
-      $('#awayName').textContent = capWords(parts[1]);
-    }else{
-      $('#homeName').textContent = capWords(bare);
+    const pure = id.includes("@") ? id.split("@")[0] : id;
+    const parts = pure.split("-vs-");
+    if (parts.length === 2){
+      $("#homeName").textContent = capWords(parts[0]);
+      $("#awayName").textContent = capWords(parts[1]);
+    } else {
+      $("#homeName").textContent = capWords(pure);
     }
-    renderServerButtons(bare);
+    renderServers();
   })();
 
   async function fetchFixturesFor(isoDate){
-    const yyyymmdd = isoToYYYYMMDD(isoDate);
-    const url = `https://fotbal.site/fixtures.php?date=${yyyymmdd}`;
-    const r = await fetch(url, {cache:'no-store'});
+    // CALL YOUR OWN DOMAIN:
+    // /fixtures.php?date=YYYYMMDD
+    const dateParam = isoToYyyymmdd(isoDate);
+    const url = `/fixtures.php?date=${dateParam}`;
+    const r = await fetch(url, {cache: "no-store"});
     if (!r.ok) return [];
     const data = await r.json();
-    // your PHP returns {ok:..., fixtures:[...]}
+    // your PHP returns { ok, date, count, fixtures: [...] }
     if (Array.isArray(data)) return data;
     if (data && Array.isArray(data.fixtures)) return data.fixtures;
     return [];
   }
 
-  function matchBySlug(sl, fx){
-    const home = slug(fx.home?.name || '');
-    const away = slug(fx.away?.name || '');
-    return sl === `${home}-vs-${away}` || sl === `${away}-vs-${home}`;
+  function matchSlug(slugPart, fx){
+    const h = slug(fx.home?.name || "");
+    const a = slug(fx.away?.name || "");
+    return slugPart === `${h}-vs-${a}` || slugPart === `${a}-vs-${h}`;
   }
 
   function applyFixture(fx){
-    $('#homeName').textContent = fx.home?.name || $('#homeName').textContent;
-    $('#awayName').textContent = fx.away?.name || $('#awayName').textContent;
-    if (fx.home?.logo) $('#homeLogo').src = fx.home.logo;
-    if (fx.away?.logo) $('#awayLogo').src = fx.away.logo;
-    $('#league').textContent = fx.league?.name || '-';
-    $('#kickoff').textContent = fx.start_utc || '-';
+    $("#homeName").textContent = fx.home?.name || $("#homeName").textContent;
+    $("#awayName").textContent = fx.away?.name || $("#awayName").textContent;
+    if (fx.home?.logo) $("#homeLogo").src = fx.home.logo;
+    if (fx.away?.logo) $("#awayLogo").src = fx.away.logo;
+    $("#league").textContent = fx.league?.name || "-";
+    $("#kickoff").textContent = fx.start_utc || "-";
     const st = formatStatus(fx.status);
-    $('#state').textContent = st || '-';
-    $('#statusLine').textContent = st || '';
+    $("#state").textContent = st || "-";
+    $("#statusLine").textContent = st || "";
   }
 
   async function load(){
     const id = getMatchId();
-    if (!id){ $('#statusLine').textContent='Missing match id'; hideLoading(); return; }
+    if (!id){ $("#statusLine").textContent = "Missing match id"; hideLoading(); return; }
 
-    const hasAt = id.includes('@');
-    const slugPart = slug(hasAt ? id.split('@')[0] : id);
-    const baseISO = hasAt
-      ? toISOfromYYYYMMDD(id.split('@')[1])
-      : new Date().toISOString().slice(0,10);
+    const hasAt = id.includes("@");
+    const slugPart = slug(hasAt ? id.split("@")[0] : id);
+    const baseISO = hasAt ? id.split("@")[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, "$1-$2-$3") : new Date().toISOString().slice(0,10);
 
     const offsets = [-2,-1,0,1,2];
     let found = null;
     for (const off of offsets){
       const dISO = addDaysISO(baseISO, off);
-      try{
+      try {
         const list = await fetchFixturesFor(dISO);
-        const hit = list.find(fx => matchBySlug(slugPart, fx));
+        const hit = list.find(fx => matchSlug(slugPart, fx));
         if (hit){ found = hit; break; }
-      }catch(e){}
+      } catch (e) {
+        // ignore this day, try next
+      }
     }
 
-    if (found){
-      applyFixture(found);
-    }else{
-      $('#statusLine').textContent = '';
-    }
+    if (found) applyFixture(found);
+    // even if not found, we still hide the overlay
     hideLoading();
   }
-
   load();
 </script>
 </body>
