--- a/public/watch.html
+++ b/public/watch.html
@@ -1,89 +1,67 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <script>
-    (function () {
-      // allow your domains
-      var ok = ['kixonair.com', 'www.kixonair.com', 'fotbal.site', 'www.fotbal.site', '', 'localhost', '127.0.0.1'];
-      try {
-        if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
-      } catch (e) {}
-    })();
-  </script>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kixonair — Match Center</title>
-  <link rel="stylesheet" href="/styles.css?v=34" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body{
-      margin:0;
-      background:#0f172a;
-      color:#fff;
-      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-    }
-    .wrap{max-width:980px;margin:0 auto;padding:18px;}
-    .badge{display:inline-block;background:rgba(15,23,42,.4);border:1px solid rgba(148,163,184,.25);padding:6px 12px;border-radius:999px;color:#fff;text-decoration:none}
-    .teams{margin-top:18px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;padding:16px;}
+    body{margin:0;background:#0f172a;color:#fff;font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif}
+    .wrap{max-width:980px;margin:0 auto;padding:18px}
+    .badge{display:inline-block;padding:6px 12px;border-radius:999px;border:1px solid rgba(148,163,184,.25);text-decoration:none;color:#fff;background:rgba(15,23,42,.5)}
+    .teams{margin-top:18px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.12);border-radius:16px;padding:18px;display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center}
     .side{display:flex;flex-direction:column;align-items:center;gap:8px}
-    .side img{width:70px;height:70px;object-fit:contain}
+    .side img{width:72px;height:72px;object-fit:contain}
     .teamName{font-size:20px;font-weight:600}
-    .h1{font-size:32px;font-weight:800;color:#6366f1}
-    .meta{margin-top:12px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;padding:12px;display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
-    .meta .label{font-size:11px;text-transform:uppercase;color:rgba(241,245,249,.5)}
-    .serverbar{margin-top:14px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.14);border-radius:16px;padding:12px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
-    .serverbar a{background:linear-gradient(135deg,#6366f1,#7c3aed);padding:10px 18px;border-radius:999px;color:#fff;text-decoration:none;font-weight:500}
+    .vs{font-size:32px;font-weight:800;color:#6366f1}
+    .meta{margin-top:14px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.12);border-radius:16px;padding:14px;display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+    .lbl{font-size:11px;letter-spacing:.05em;text-transform:uppercase;color:rgba(241,245,249,.5);margin-bottom:3px}
+    .serverbar{margin-top:14px;background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.12);border-radius:16px;padding:14px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
+    .serverbar a{background:linear-gradient(135deg,#6366f1,#7c3aed);color:#fff;text-decoration:none;padding:10px 18px;border-radius:999px;font-weight:500}
     #loadingOverlay{position:fixed;inset:0;background:rgba(0,0,0,.7);display:flex;flex-direction:column;align-items:center;justify-content:center;gap:6px;z-index:50}
     #loadingOverlay.hidden{display:none}
-    .spinner{width:42px;height:42px;border:4px solid rgba(255,255,255,.1);border-top-color:#fff;border-radius:50%;animation:spin 1s linear infinite}
+    .spinner{width:42px;height:42px;border:4px solid rgba(255,255,255,.15);border-top-color:#fff;border-radius:50%;animation:spin 1s linear infinite}
     @keyframes spin{to{transform:rotate(360deg)}}
-    @media(max-width:650px){.teams{grid-template-columns:1fr;}.meta{grid-template-columns:1fr;}}
+    #errorBox{margin-top:12px;color:#fca5a5;font-size:13px;white-space:pre-wrap;word-break:break-word}
+    @media(max-width:650px){.teams{grid-template-columns:1fr}.meta{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
-  <div id="loadingOverlay">
-    <div class="spinner"></div>
-    <div>Loading match...</div>
+<div id="loadingOverlay">
+  <div class="spinner"></div>
+  <div>Loading match...</div>
+</div>
+<main class="wrap">
+  <a href="/" class="badge">← Back</a>
+
+  <div class="teams">
+    <div class="side">
+      <img id="homeLogo" src="/logo.svg" alt="">
+      <div id="homeName" class="teamName">Home</div>
+    </div>
+    <div class="vs">VS</div>
+    <div class="side">
+      <img id="awayLogo" src="/logo.svg" alt="">
+      <div id="awayName" class="teamName">Away</div>
+    </div>
   </div>
-  <main class="wrap">
-    <a href="/" class="badge">← Back</a>
 
-    <div class="teams">
-      <div class="side">
-        <img id="homeLogo" src="/logo.svg" alt="">
-        <div id="homeName" class="teamName">Home</div>
-      </div>
-      <div class="h1">VS</div>
-      <div class="side">
-        <img id="awayLogo" src="/logo.svg" alt="">
-        <div id="awayName" class="teamName">Away</div>
-      </div>
-    </div>
+  <p id="statusLine" style="text-align:center;margin-top:8px;color:#94a3b8;">Loading...</p>
 
-    <p id="statusLine" style="text-align:center;margin-top:8px;color:#94a3b8;">Loading...</p>
+  <div class="meta">
+    <div><div class="lbl">Kickoff</div><div id="kickoff">-</div></div>
+    <div><div class="lbl">Competition</div><div id="league">-</div></div>
+    <div><div class="lbl">Status</div><div id="state">-</div></div>
+  </div>
 
-    <div class="meta">
-      <div>
-        <div class="label">Kickoff</div>
-        <div id="kickoff">-</div>
-      </div>
-      <div>
-        <div class="label">Competition</div>
-        <div id="league">-</div>
-      </div>
-      <div>
-        <div class="label">Status</div>
-        <div id="state">-</div>
-      </div>
-    </div>
-
-    <div id="serverBar" class="serverbar"></div>
-  </main>
+  <div id="serverBar" class="serverbar"></div>
+  <div id="errorBox"></div>
+</main>
 
 <script>
+  // ---------- small helpers ----------
   const $ = id => document.getElementById(id);
-
   function hideLoading(){ $("#loadingOverlay").classList.add("hidden"); }
-  function qs(name){ return new URLSearchParams(location.search).get(name) || ""; }
+  function qs(n){ return new URLSearchParams(location.search).get(n) || ""; }
   function getMatchId(){ return qs("id") || qs("m") || ""; }
   function slug(s){ return String(s||"").toLowerCase().replace(/[^a-z0-9]+/g,"-").replace(/(^-|-$)/g,""); }
   function capWords(s){ return String(s||"").split(/[-\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):"").join(" "); }
@@ -103,7 +81,7 @@
     bar.innerHTML = labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join("");
   }
 
-  // prefill names from URL so it's never empty
+  // prefill names from URL
   (function prime(){
     const id = getMatchId();
     if (!id) return;
@@ -118,24 +96,40 @@
     renderServers();
   })();
 
+  // ---------- fetch fixtures (robust) ----------
   async function fetchFixturesFor(isoDate){
-    // CALL YOUR OWN DOMAIN:
-    // /fixtures.php?date=YYYYMMDD
-    const dateParam = isoToYyyymmdd(isoDate);
-    const url = `/fixtures.php?date=${dateParam}`;
-    const r = await fetch(url, {cache: "no-store"});
-    if (!r.ok) return [];
-    const data = await r.json();
-    // your PHP returns { ok, date, count, fixtures: [...] }
-    if (Array.isArray(data)) return data;
-    if (data && Array.isArray(data.fixtures)) return data.fixtures;
-    return [];
+    const ymd = isoToYyyymmdd(isoDate);
+    const endpoints = [
+      `/fixtures.php?date=${ymd}`,                             // your site
+      `https://fotbal.site/fixtures.php?date=${ymd}`          // fallback
+    ];
+    const errors = [];
+    for (const url of endpoints){
+      try{
+        const r = await fetch(url, {cache:"no-store"});
+        const text = await r.text();
+        // try to parse
+        let data;
+        try { data = JSON.parse(text); }
+        catch(parseErr){
+          errors.push(`Parse failed for ${url}: ${parseErr} | body: ${text.slice(0,200)}`);
+          continue;
+        }
+        // normalize
+        if (Array.isArray(data)) return {list:data, errors};
+        if (data && Array.isArray(data.fixtures)) return {list:data.fixtures, errors};
+        errors.push(`No fixtures array in ${url}`);
+      }catch(e){
+        errors.push(`Fetch failed for ${url}: ${e}`);
+      }
+    }
+    return {list:[], errors};
   }
 
-  function matchSlug(slugPart, fx){
+  function matchSlug(sl, fx){
     const h = slug(fx.home?.name || "");
     const a = slug(fx.away?.name || "");
-    return slugPart === `${h}-vs-${a}` || slugPart === `${a}-vs-${h}`;
+    return sl === `${h}-vs-${a}` || sl === `${a}-vs-${h}`;
   }
 
   function applyFixture(fx){
@@ -156,25 +150,36 @@
 
     const hasAt = id.includes("@");
     const slugPart = slug(hasAt ? id.split("@")[0] : id);
-    const baseISO = hasAt ? id.split("@")[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, "$1-$2-$3") : new Date().toISOString().slice(0,10);
+    const baseISO = hasAt
+      ? id.split("@")[1].replace(/(\\d{4})(\\d{2})(\\d{2})/,"$1-$2-$3")
+      : new Date().toISOString().slice(0,10);
 
-    const offsets = [-2,-1,0,1,2];
+    const days = [-2,-1,0,1,2];
     let found = null;
-    for (const off of offsets){
-      const dISO = addDaysISO(baseISO, off);
-      try {
-        const list = await fetchFixturesFor(dISO);
-        const hit = list.find(fx => matchSlug(slugPart, fx));
-        if (hit){ found = hit; break; }
-      } catch (e) {
-        // ignore this day, try next
+    let allErrors = [];
+
+    for (const d of days){
+      const iso = addDaysISO(baseISO, d);
+      const {list, errors} = await fetchFixturesFor(iso);
+      allErrors = allErrors.concat(errors);
+      const hit = list.find(fx => matchSlug(slugPart, fx));
+      if (hit){ found = hit; break; }
+    }
+
+    if (found){
+      applyFixture(found);
+    } else {
+      $("#statusLine").textContent = "";
+      if (allErrors.length){
+        $("#errorBox").textContent = "Could not load match.\n" + allErrors.join("\n");
+      } else {
+        $("#errorBox").textContent = "Could not load match (no matching fixture).";
       }
     }
 
-    if (found) applyFixture(found);
-    // even if not found, we still hide the overlay
     hideLoading();
   }
+
   load();
 </script>
 </body>
